[#12574] test(lance): isolate standalone auth integration service in its own JVM